core/wmscore/Src/DataManagement/WmsQL1Parser.cpp

#undef emit


// Generated from WmsQL1.g4 by ANTLR 4.7.2



#include "WmsQL1Parser.h"


using namespace antlrcpp;
using namespace antlr4;

WmsQL1Parser::WmsQL1Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

WmsQL1Parser::~WmsQL1Parser() {
  delete _interpreter;
}

std::string WmsQL1Parser::getGrammarFileName() const {
  return "WmsQL1.g4";
}

const std::vector<std::string>& WmsQL1Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& WmsQL1Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StatementContext ------------------------------------------------------------------

WmsQL1Parser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WmsQL1Parser::StatementContext::EOF() {
  return getToken(WmsQL1Parser::EOF, 0);
}

WmsQL1Parser::Select_statementContext* WmsQL1Parser::StatementContext::select_statement() {
  return getRuleContext<WmsQL1Parser::Select_statementContext>(0);
}

WmsQL1Parser::Insert_statementContext* WmsQL1Parser::StatementContext::insert_statement() {
  return getRuleContext<WmsQL1Parser::Insert_statementContext>(0);
}

WmsQL1Parser::Update_statementContext* WmsQL1Parser::StatementContext::update_statement() {
  return getRuleContext<WmsQL1Parser::Update_statementContext>(0);
}

WmsQL1Parser::Delete_statementContext* WmsQL1Parser::StatementContext::delete_statement() {
  return getRuleContext<WmsQL1Parser::Delete_statementContext>(0);
}


size_t WmsQL1Parser::StatementContext::getRuleIndex() const {
  return WmsQL1Parser::RuleStatement;
}


WmsQL1Parser::StatementContext* WmsQL1Parser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 0, WmsQL1Parser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case WmsQL1Parser::SELECT: {
        setState(70);
        select_statement();
        break;
      }

      case WmsQL1Parser::INSERT: {
        setState(71);
        insert_statement();
        break;
      }

      case WmsQL1Parser::UPDATE: {
        setState(72);
        update_statement();
        break;
      }

      case WmsQL1Parser::DELETE: {
        setState(73);
        delete_statement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(76);
    match(WmsQL1Parser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Select_statementContext ------------------------------------------------------------------

WmsQL1Parser::Select_statementContext::Select_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WmsQL1Parser::Select_clauseContext* WmsQL1Parser::Select_statementContext::select_clause() {
  return getRuleContext<WmsQL1Parser::Select_clauseContext>(0);
}

WmsQL1Parser::From_clauseContext* WmsQL1Parser::Select_statementContext::from_clause() {
  return getRuleContext<WmsQL1Parser::From_clauseContext>(0);
}

WmsQL1Parser::Where_clauseContext* WmsQL1Parser::Select_statementContext::where_clause() {
  return getRuleContext<WmsQL1Parser::Where_clauseContext>(0);
}

WmsQL1Parser::Groupby_clauseContext* WmsQL1Parser::Select_statementContext::groupby_clause() {
  return getRuleContext<WmsQL1Parser::Groupby_clauseContext>(0);
}

WmsQL1Parser::Orderby_clauseContext* WmsQL1Parser::Select_statementContext::orderby_clause() {
  return getRuleContext<WmsQL1Parser::Orderby_clauseContext>(0);
}

WmsQL1Parser::Limit_clauseContext* WmsQL1Parser::Select_statementContext::limit_clause() {
  return getRuleContext<WmsQL1Parser::Limit_clauseContext>(0);
}


size_t WmsQL1Parser::Select_statementContext::getRuleIndex() const {
  return WmsQL1Parser::RuleSelect_statement;
}


WmsQL1Parser::Select_statementContext* WmsQL1Parser::select_statement() {
  Select_statementContext *_localctx = _tracker.createInstance<Select_statementContext>(_ctx, getState());
  enterRule(_localctx, 2, WmsQL1Parser::RuleSelect_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    select_clause();
    setState(79);
    from_clause();
    setState(81);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WmsQL1Parser::WHERE) {
      setState(80);
      where_clause();
    }
    setState(84);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WmsQL1Parser::GROUP) {
      setState(83);
      groupby_clause();
    }
    setState(87);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WmsQL1Parser::ORDER) {
      setState(86);
      orderby_clause();
    }
    setState(90);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WmsQL1Parser::LIMIT) {
      setState(89);
      limit_clause();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Insert_statementContext ------------------------------------------------------------------

WmsQL1Parser::Insert_statementContext::Insert_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WmsQL1Parser::Insert_clauseContext* WmsQL1Parser::Insert_statementContext::insert_clause() {
  return getRuleContext<WmsQL1Parser::Insert_clauseContext>(0);
}

WmsQL1Parser::Value_clauseContext* WmsQL1Parser::Insert_statementContext::value_clause() {
  return getRuleContext<WmsQL1Parser::Value_clauseContext>(0);
}

WmsQL1Parser::Set_clauseContext* WmsQL1Parser::Insert_statementContext::set_clause() {
  return getRuleContext<WmsQL1Parser::Set_clauseContext>(0);
}


size_t WmsQL1Parser::Insert_statementContext::getRuleIndex() const {
  return WmsQL1Parser::RuleInsert_statement;
}


WmsQL1Parser::Insert_statementContext* WmsQL1Parser::insert_statement() {
  Insert_statementContext *_localctx = _tracker.createInstance<Insert_statementContext>(_ctx, getState());
  enterRule(_localctx, 4, WmsQL1Parser::RuleInsert_statement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(98);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(92);
      insert_clause();
      setState(93);
      value_clause();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(95);
      insert_clause();
      setState(96);
      set_clause();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Update_statementContext ------------------------------------------------------------------

WmsQL1Parser::Update_statementContext::Update_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WmsQL1Parser::Update_clauseContext* WmsQL1Parser::Update_statementContext::update_clause() {
  return getRuleContext<WmsQL1Parser::Update_clauseContext>(0);
}

WmsQL1Parser::Set_clauseContext* WmsQL1Parser::Update_statementContext::set_clause() {
  return getRuleContext<WmsQL1Parser::Set_clauseContext>(0);
}

WmsQL1Parser::Where_clauseContext* WmsQL1Parser::Update_statementContext::where_clause() {
  return getRuleContext<WmsQL1Parser::Where_clauseContext>(0);
}

WmsQL1Parser::Orderby_clauseContext* WmsQL1Parser::Update_statementContext::orderby_clause() {
  return getRuleContext<WmsQL1Parser::Orderby_clauseContext>(0);
}

WmsQL1Parser::Limit_clauseContext* WmsQL1Parser::Update_statementContext::limit_clause() {
  return getRuleContext<WmsQL1Parser::Limit_clauseContext>(0);
}


size_t WmsQL1Parser::Update_statementContext::getRuleIndex() const {
  return WmsQL1Parser::RuleUpdate_statement;
}


WmsQL1Parser::Update_statementContext* WmsQL1Parser::update_statement() {
  Update_statementContext *_localctx = _tracker.createInstance<Update_statementContext>(_ctx, getState());
  enterRule(_localctx, 6, WmsQL1Parser::RuleUpdate_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    update_clause();
    setState(101);
    set_clause();
    setState(103);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WmsQL1Parser::WHERE) {
      setState(102);
      where_clause();
    }
    setState(106);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WmsQL1Parser::ORDER) {
      setState(105);
      orderby_clause();
    }
    setState(109);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WmsQL1Parser::LIMIT) {
      setState(108);
      limit_clause();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Delete_statementContext ------------------------------------------------------------------

WmsQL1Parser::Delete_statementContext::Delete_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WmsQL1Parser::Delete_clauseContext* WmsQL1Parser::Delete_statementContext::delete_clause() {
  return getRuleContext<WmsQL1Parser::Delete_clauseContext>(0);
}

WmsQL1Parser::From_clauseContext* WmsQL1Parser::Delete_statementContext::from_clause() {
  return getRuleContext<WmsQL1Parser::From_clauseContext>(0);
}

WmsQL1Parser::Where_clauseContext* WmsQL1Parser::Delete_statementContext::where_clause() {
  return getRuleContext<WmsQL1Parser::Where_clauseContext>(0);
}

WmsQL1Parser::Orderby_clauseContext* WmsQL1Parser::Delete_statementContext::orderby_clause() {
  return getRuleContext<WmsQL1Parser::Orderby_clauseContext>(0);
}

WmsQL1Parser::Limit_clauseContext* WmsQL1Parser::Delete_statementContext::limit_clause() {
  return getRuleContext<WmsQL1Parser::Limit_clauseContext>(0);
}


size_t WmsQL1Parser::Delete_statementContext::getRuleIndex() const {
  return WmsQL1Parser::RuleDelete_statement;
}


WmsQL1Parser::Delete_statementContext* WmsQL1Parser::delete_statement() {
  Delete_statementContext *_localctx = _tracker.createInstance<Delete_statementContext>(_ctx, getState());
  enterRule(_localctx, 8, WmsQL1Parser::RuleDelete_statement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    delete_clause();
    setState(112);
    from_clause();
    setState(114);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WmsQL1Parser::WHERE) {
      setState(113);
      where_clause();
    }
    setState(117);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WmsQL1Parser::ORDER) {
      setState(116);
      orderby_clause();
    }
    setState(120);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WmsQL1Parser::LIMIT) {
      setState(119);
      limit_clause();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Select_clauseContext ------------------------------------------------------------------

WmsQL1Parser::Select_clauseContext::Select_clauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WmsQL1Parser::Select_clauseContext::SELECT() {
  return getToken(WmsQL1Parser::SELECT, 0);
}

std::vector<WmsQL1Parser::Select_expressionContext *> WmsQL1Parser::Select_clauseContext::select_expression() {
  return getRuleContexts<WmsQL1Parser::Select_expressionContext>();
}

WmsQL1Parser::Select_expressionContext* WmsQL1Parser::Select_clauseContext::select_expression(size_t i) {
  return getRuleContext<WmsQL1Parser::Select_expressionContext>(i);
}


size_t WmsQL1Parser::Select_clauseContext::getRuleIndex() const {
  return WmsQL1Parser::RuleSelect_clause;
}


WmsQL1Parser::Select_clauseContext* WmsQL1Parser::select_clause() {
  Select_clauseContext *_localctx = _tracker.createInstance<Select_clauseContext>(_ctx, getState());
  enterRule(_localctx, 10, WmsQL1Parser::RuleSelect_clause);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(WmsQL1Parser::SELECT);
    setState(131);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << WmsQL1Parser::DISTINCT)
      | (1ULL << WmsQL1Parser::AVG)
      | (1ULL << WmsQL1Parser::MAX)
      | (1ULL << WmsQL1Parser::MIN)
      | (1ULL << WmsQL1Parser::SUM)
      | (1ULL << WmsQL1Parser::COUNT)
      | (1ULL << WmsQL1Parser::STAR)
      | (1ULL << WmsQL1Parser::ID)
      | (1ULL << WmsQL1Parser::IDPATH))) != 0)) {
      setState(123);
      select_expression();
      setState(128);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == WmsQL1Parser::T__0) {
        setState(124);
        match(WmsQL1Parser::T__0);
        setState(125);
        select_expression();
        setState(130);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Select_expressionContext ------------------------------------------------------------------

WmsQL1Parser::Select_expressionContext::Select_expressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WmsQL1Parser::Aggregate_expressionContext* WmsQL1Parser::Select_expressionContext::aggregate_expression() {
  return getRuleContext<WmsQL1Parser::Aggregate_expressionContext>(0);
}

WmsQL1Parser::Object_refContext* WmsQL1Parser::Select_expressionContext::object_ref() {
  return getRuleContext<WmsQL1Parser::Object_refContext>(0);
}

tree::TerminalNode* WmsQL1Parser::Select_expressionContext::DISTINCT() {
  return getToken(WmsQL1Parser::DISTINCT, 0);
}

tree::TerminalNode* WmsQL1Parser::Select_expressionContext::STAR() {
  return getToken(WmsQL1Parser::STAR, 0);
}


size_t WmsQL1Parser::Select_expressionContext::getRuleIndex() const {
  return WmsQL1Parser::RuleSelect_expression;
}


WmsQL1Parser::Select_expressionContext* WmsQL1Parser::select_expression() {
  Select_expressionContext *_localctx = _tracker.createInstance<Select_expressionContext>(_ctx, getState());
  enterRule(_localctx, 12, WmsQL1Parser::RuleSelect_expression);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(139);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case WmsQL1Parser::AVG:
      case WmsQL1Parser::MAX:
      case WmsQL1Parser::MIN:
      case WmsQL1Parser::SUM:
      case WmsQL1Parser::COUNT: {
        enterOuterAlt(_localctx, 1);
        setState(133);
        aggregate_expression();
        break;
      }

      case WmsQL1Parser::DISTINCT:
      case WmsQL1Parser::ID:
      case WmsQL1Parser::IDPATH: {
        enterOuterAlt(_localctx, 2);
        setState(135);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == WmsQL1Parser::DISTINCT) {
          setState(134);
          match(WmsQL1Parser::DISTINCT);
        }
        setState(137);
        object_ref();
        break;
      }

      case WmsQL1Parser::STAR: {
        enterOuterAlt(_localctx, 3);
        setState(138);
        match(WmsQL1Parser::STAR);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Aggregate_expressionContext ------------------------------------------------------------------

WmsQL1Parser::Aggregate_expressionContext::Aggregate_expressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WmsQL1Parser::Object_refContext* WmsQL1Parser::Aggregate_expressionContext::object_ref() {
  return getRuleContext<WmsQL1Parser::Object_refContext>(0);
}

tree::TerminalNode* WmsQL1Parser::Aggregate_expressionContext::AVG() {
  return getToken(WmsQL1Parser::AVG, 0);
}

tree::TerminalNode* WmsQL1Parser::Aggregate_expressionContext::MAX() {
  return getToken(WmsQL1Parser::MAX, 0);
}

tree::TerminalNode* WmsQL1Parser::Aggregate_expressionContext::MIN() {
  return getToken(WmsQL1Parser::MIN, 0);
}

tree::TerminalNode* WmsQL1Parser::Aggregate_expressionContext::SUM() {
  return getToken(WmsQL1Parser::SUM, 0);
}

tree::TerminalNode* WmsQL1Parser::Aggregate_expressionContext::COUNT() {
  return getToken(WmsQL1Parser::COUNT, 0);
}

tree::TerminalNode* WmsQL1Parser::Aggregate_expressionContext::DISTINCT() {
  return getToken(WmsQL1Parser::DISTINCT, 0);
}

tree::TerminalNode* WmsQL1Parser::Aggregate_expressionContext::STAR() {
  return getToken(WmsQL1Parser::STAR, 0);
}


size_t WmsQL1Parser::Aggregate_expressionContext::getRuleIndex() const {
  return WmsQL1Parser::RuleAggregate_expression;
}


WmsQL1Parser::Aggregate_expressionContext* WmsQL1Parser::aggregate_expression() {
  Aggregate_expressionContext *_localctx = _tracker.createInstance<Aggregate_expressionContext>(_ctx, getState());
  enterRule(_localctx, 14, WmsQL1Parser::RuleAggregate_expression);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(156);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 18, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(141);
      dynamic_cast<Aggregate_expressionContext *>(_localctx)->aggFunc = _input->LT(1);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << WmsQL1Parser::AVG)
        | (1ULL << WmsQL1Parser::MAX)
        | (1ULL << WmsQL1Parser::MIN)
        | (1ULL << WmsQL1Parser::SUM)
        | (1ULL << WmsQL1Parser::COUNT))) != 0))) {
        dynamic_cast<Aggregate_expressionContext *>(_localctx)->aggFunc = _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(142);
      match(WmsQL1Parser::T__1);
      setState(144);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == WmsQL1Parser::DISTINCT) {
        setState(143);
        match(WmsQL1Parser::DISTINCT);
      }
      setState(146);
      object_ref();
      setState(147);
      match(WmsQL1Parser::T__2);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(149);
      dynamic_cast<Aggregate_expressionContext *>(_localctx)->aggFunc = match(WmsQL1Parser::COUNT);
      setState(150);
      match(WmsQL1Parser::T__1);
      setState(152);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == WmsQL1Parser::DISTINCT) {
        setState(151);
        match(WmsQL1Parser::DISTINCT);
      }
      setState(154);
      match(WmsQL1Parser::STAR);
      setState(155);
      match(WmsQL1Parser::T__2);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Insert_clauseContext ------------------------------------------------------------------

WmsQL1Parser::Insert_clauseContext::Insert_clauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WmsQL1Parser::Insert_clauseContext::INSERT() {
  return getToken(WmsQL1Parser::INSERT, 0);
}

WmsQL1Parser::Class_refContext* WmsQL1Parser::Insert_clauseContext::class_ref() {
  return getRuleContext<WmsQL1Parser::Class_refContext>(0);
}

tree::TerminalNode* WmsQL1Parser::Insert_clauseContext::INTO() {
  return getToken(WmsQL1Parser::INTO, 0);
}

std::vector<WmsQL1Parser::Object_refContext *> WmsQL1Parser::Insert_clauseContext::object_ref() {
  return getRuleContexts<WmsQL1Parser::Object_refContext>();
}

WmsQL1Parser::Object_refContext* WmsQL1Parser::Insert_clauseContext::object_ref(size_t i) {
  return getRuleContext<WmsQL1Parser::Object_refContext>(i);
}


size_t WmsQL1Parser::Insert_clauseContext::getRuleIndex() const {
  return WmsQL1Parser::RuleInsert_clause;
}


WmsQL1Parser::Insert_clauseContext* WmsQL1Parser::insert_clause() {
  Insert_clauseContext *_localctx = _tracker.createInstance<Insert_clauseContext>(_ctx, getState());
  enterRule(_localctx, 16, WmsQL1Parser::RuleInsert_clause);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(158);
    match(WmsQL1Parser::INSERT);
    setState(160);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WmsQL1Parser::INTO) {
      setState(159);
      match(WmsQL1Parser::INTO);
    }
    setState(162);
    class_ref();
    setState(175);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WmsQL1Parser::T__1) {
      setState(163);
      match(WmsQL1Parser::T__1);
      setState(172);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == WmsQL1Parser::ID

      || _la == WmsQL1Parser::IDPATH) {
        setState(164);
        dynamic_cast<Insert_clauseContext *>(_localctx)->object_refContext = object_ref();
        dynamic_cast<Insert_clauseContext *>(_localctx)->members.push_back(dynamic_cast<Insert_clauseContext *>(_localctx)->object_refContext);
        setState(169);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == WmsQL1Parser::T__0) {
          setState(165);
          match(WmsQL1Parser::T__0);
          setState(166);
          dynamic_cast<Insert_clauseContext *>(_localctx)->object_refContext = object_ref();
          dynamic_cast<Insert_clauseContext *>(_localctx)->members.push_back(dynamic_cast<Insert_clauseContext *>(_localctx)->object_refContext);
          setState(171);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
      }
      setState(174);
      match(WmsQL1Parser::T__2);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Update_clauseContext ------------------------------------------------------------------

WmsQL1Parser::Update_clauseContext::Update_clauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WmsQL1Parser::Update_clauseContext::UPDATE() {
  return getToken(WmsQL1Parser::UPDATE, 0);
}

std::vector<WmsQL1Parser::Class_refContext *> WmsQL1Parser::Update_clauseContext::class_ref() {
  return getRuleContexts<WmsQL1Parser::Class_refContext>();
}

WmsQL1Parser::Class_refContext* WmsQL1Parser::Update_clauseContext::class_ref(size_t i) {
  return getRuleContext<WmsQL1Parser::Class_refContext>(i);
}


size_t WmsQL1Parser::Update_clauseContext::getRuleIndex() const {
  return WmsQL1Parser::RuleUpdate_clause;
}


WmsQL1Parser::Update_clauseContext* WmsQL1Parser::update_clause() {
  Update_clauseContext *_localctx = _tracker.createInstance<Update_clauseContext>(_ctx, getState());
  enterRule(_localctx, 18, WmsQL1Parser::RuleUpdate_clause);
  size_t _la = 0;
